<resources>
    <string name="landing_button_calculate_bmi">BMI Calculator</string>
    <string name="landing_button_calculate_hb">Harris-Benedict Calculator</string>
    <string name="landing_button_culinary_recipes">Culinary recipes</string>
    <string name="landing_button_charts">Statistics</string>
    <string name="landing_button_quiz">Quiz</string>
    <string name="app_name">Body coach</string>
    <string name="text_bmi_result_title">Your Body Mass Index</string>
    <string name="input_hint_weight">Weight in kilograms</string>
    <string name="input_hint_height">Height in centimeters</string>
    <string name="input_hint_age">Age in years</string>
    <string name="text_prompt_weight">Enter the weight:</string>
    <string name="text_prompt_height">Enter the height:</string>
    <string name="text_prompt_age">Enter the age:</string>
    <string name="text_bmi_score">BMI</string>
    <string name="text_bmr_score">BMR</string>
    <string name="text_bmr_score_unit">kcal</string>
    <string name="text_bmi_category">Category</string>
    <string name="text_hb_result_title">Basal Metabolic Rate</string>
    <string name="bmi_1_category_name">You are underweight</string>
    <string name="bmi_2_category_name">You are normal weight</string>
    <string name="bmi_3_category_name">You are overweight</string>
    <string name="bmi_4_category_name">You are obese weight</string>
    <string name="bmi_button_calculate">Calculate</string>
    <string name="bmi_bad_data">Your data is out of range!</string>
    <string name="bmr_toggle_male">Male</string>
    <string name="bmr_toggle_female">Female</string>
    <string name="bmr_toggle_text">Change sex</string>
    <string name="bmr_button_calculate">Calculate</string>
    <string name="title_activity_bmi">BmiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="rec_title">Sałatka z rukoli i pomidorów koktajlowych</string>
    <string name="rec_ingredients_title">Składniki</string>
    <string-array name="rec_ingredients">
        <item>rukola liście - 250 gramów</item>
        <item>pomidory koktajlowe - 200 gramów</item>
        <item>ser gouda - 200 gramów</item>
        <item>sos sałatkowy włoski Knorr - 1 opakowanie</item>
        <item>oliwa z oliwek - 5 łyżek</item>
        <item>ząbek czosnku - 1 sztuka</item>
        <item>kajzerki (mogą być lekko czerstwe)- 2 sztuki</item>
        <item>szczypiorek - 0.5 pęczka</item>
    </string-array>
    <string name="rec_steps_title">Przygotowanie krok po kroku</string>
    <string-array name="rec_steps">
        <item>Krok 1</item>
        <item>Czosnek rozetrzyj na miazgę i połącz z oliwą (3 łyżki). Kajzerki pokrój w kostkę pół centymetra na pół , pomieszaj z oliwą (2 łyżki) i czosnkiem. Rozłóż na blasze wyłożonej pergaminem, wstaw na około 10 minut do nagrzanego do 180*C piekarnika, aż zrobią się złociste i chrupiące. Możesz też smażyć je na patelni.</item>
        <item>Krok 2</item>
        <item>W dużej misce wymieszaj sos sałatkowy włoski z oliwą i wodą, zgodnie z przepisem na opakowaniu.</item>
        <item>Krok 3</item>
        <item>Szczypior drobno posiekaj, ser pokrój w cienkie, długie na 2–3 cm słupki.</item>
        <item>Krok 4</item>
        <item>Pomidorki umyj, przekrój na cztery części, umieść w misce z sosem, dodaj porwane listki rukoli, szczypior i plastry sera, całość dokładnie wymieszaj. Sałatkę podawaj posypaną grzankami z wierzchu.\</item>
    </string-array>

    <string name="charts_title">Adult obesity in UK</string>
    <string name="chart1_1">Overweight</string>
    <string name="chart1_2">Obese</string>
    <string name="chart1_3">Slim-normal</string>

    <string name="quiz_title">Test</string>
    <string name="quiz_button_Submit">Następne pytanie</string>
    <string name="quiz_result">Wynik: </string>

    <string-array name="quiz_1">
        <item>Ile jest 2+2?</item>
        <item>1</item>
        <item>3</item>
        <item>4</item>
        <item>E</item>
    </string-array>

    <string-array name="quiz_2">
        <item>Ile jest 3*2?</item>
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>E</item>
    </string-array>

    <string-array name="quiz_3">
        <item>Ile jest 2+4?</item>
        <item>1</item>
        <item>6</item>
        <item>4</item>
        <item>E</item>
    </string-array>

    <string-array name="quiz_4">
        <item>Ile jest 2+5?</item>
        <item>1</item>
        <item>3</item>
        <item>4</item>
        <item>7</item>
    </string-array>

    <string-array name="quiz_5">
        <item>Ile jest 3*3?</item>
        <item>9</item>
        <item>3</item>
        <item>4</item>
        <item>E</item>
    </string-array>

    <string-array name="quiz_6">
        <item>Ile jest 7+2?</item>
        <item>11</item>
        <item>3</item>
        <item>9</item>
        <item>6+3</item>
    </string-array>




</resources>