<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <ToggleButton
            android:id="@+id/bmrSexToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bmr_toggle_text"
            android:textOff="@string/bmr_toggle_female"
            android:textOn="@string/bmr_toggle_male" />

        <TextView
            android:id="@+id/rmiTextViewHeight"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/text_prompt_height"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rmiEditTextNumberHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/input_hint_height"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint_height"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rmiTextViewWeight"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/text_prompt_weight"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rmiEditTextNumberWeight"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints="@string/input_hint_weight"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint_weight"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rmiTextViewAge"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/text_prompt_age"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/rmiEditTextNumberAge"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint_age"
            android:inputType="number"
            android:textSize="20sp"
            android:autofillHints="@string/input_hint_age" />

        <TextView
            android:id="@+id/rmiTextViewHbResultTitle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/text_hb_result_title"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rmiTextViewBmiScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_bmr_score"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>