<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBmi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/text_prompt_height"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNumberHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/input_hint_height"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint_height"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/text_prompt_weight"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNumberWeight"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints="@string/input_hint_weight"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint_weight"
            android:inputType="number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bmiButtonCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculateBmi"
            android:text="@string/bmi_button_calculate" />

        <TextView
            android:id="@+id/textViewBmiResultTitle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/teal_200"
            android:gravity="center"
            android:text="@string/text_bmi_result_title"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewBmiScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_bmi_score"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/textViewBmiCategory"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/text_bmi_category" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>