<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="60sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/peaple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_button_bmi_launcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landing_button_calculate_bmi" />

            <Button
                android:id="@+id/main_button_HBR_launcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landing_button_calculate_hb" />

            <Button
                android:id="@+id/main_button_live_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landing_button_culinary_recipes" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>