<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RmiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <TextView
            android:id="@+id/rmiTextViewRecTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rec_title"
            android:textSize="17sp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginVertical="0dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rmiImageViewRec"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            app:srcCompat="@drawable/salad"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/rmiTextViewIngredientsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rec_ingredients_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rmiTextViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/rmiTextViewStepsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rec_steps_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rmiTextViewSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>